# prediccion_ventas_supermercados

./: .gitignore  README.md  apuntes.txt  main.py  pyproject.toml  requirements.txt
.tmp_dagster_home_vxc1e9v3/history/: runs.db
.tmp_dagster_home_vxc1e9v3/history/runs/: .db  b679219a-d5fa-417c-8574-d382566203cd.db  d97be536-a953-4581-ba7e-743dd691442d.db  index.db
.tmp_dagster_home_vxc1e9v3/schedules/: schedules.db
.tmp_dagster_home_vxc1e9v3/storage/: raw_store_data
app/: app.py
data/: store.xlsx  test.xlsx  ~$train.xlsx
notebooks/: 01_exploracion.ipynb  02_entrenamiento.ipynb
src/: assets.py
